<resources>
    <string name="app_name">CWRUMapper</string>
    <string name="google_maps_api_key">AIzaSyDNbP-3OzqyB2PfR4_XElCfdhAtRCfNC2o</string>
    <string name="ipsum">Lorem ipsum</string>
    <string name="ipsum5">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus ex. Praesent tincidunt cursus lorem, eu ornare ipsum hendrerit et. Cras a magna lorem. Vestibulum condimentum eros enim, quis lobortis elit feugiat et. Mauris id arcu porta erat lobortis congue. Quisque hendrerit dignissim cursus. Maecenas erat mauris, fringilla sed placerat a, ullamcorper vel felis. Fusce pellentesque odio bibendum ultricies euismod. Maecenas quis urna odio.

        Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris in lorem non nisi ornare elementum. Curabitur quam sem, accumsan vel rhoncus eget, gravida egestas purus. Sed metus ante, mollis suscipit varius eu, tristique nec felis. Ut quis arcu tempor, rhoncus lorem et, tempor mi. Proin sodales luctus nisi, a convallis tortor semper ut. Aenean vel condimentum nisi, sit amet eleifend diam. Mauris ac rutrum diam, mollis finibus ante. Mauris vestibulum pharetra libero. Nulla porta vulputate luctus. Maecenas gravida arcu ac bibendum aliquet. Mauris sed fringilla massa. Nullam accumsan sodales nisi, et auctor lacus commodo vitae. Integer non risus sem. Etiam et ipsum ligula.

        Phasellus interdum sollicitudin massa. Aliquam in ipsum a mauris dignissim sodales sit amet eu elit. Curabitur at risus luctus lectus porta venenatis in ac enim. Nam commodo orci et nisi luctus, quis lacinia mauris laoreet. Quisque mauris tellus, aliquam sit amet ante in, imperdiet varius elit. Suspendisse pulvinar dolor sed odio ornare sollicitudin. Etiam commodo congue dui eu posuere. Etiam finibus, turpis eu tempus pulvinar, ipsum erat ullamcorper lectus, sit amet ornare leo mauris a orci. Maecenas et felis sit amet nisl vulputate porttitor. Maecenas egestas, ligula sed pellentesque aliquam, dolor libero iaculis orci, sollicitudin gravida mauris lacus eu lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.

        Vivamus hendrerit risus ut semper malesuada. Nullam sed fermentum dolor, nec mollis lacus. Nunc at interdum ipsum. Vivamus turpis erat, sollicitudin ac enim vitae, tempor tempor velit. Ut et tortor dolor. Curabitur condimentum lorem in vulputate rhoncus. Vestibulum libero lectus, accumsan ac gravida tristique, pharetra non sapien. Aenean quis ligula augue. Aliquam hendrerit, orci nec efficitur ullamcorper, nisi lorem molestie eros, sed tincidunt nibh erat rhoncus orci. Integer fringilla ullamcorper nunc, non posuere urna imperdiet at. Donec sed sapien fringilla elit semper mollis.

        Donec id eros vulputate, sodales est eget, mattis ipsum. Nam nec odio eu odio aliquet mattis et nec neque. Aliquam ornare eros laoreet justo scelerisque, maximus interdum purus mollis. Pellentesque cursus gravida nulla, nec porttitor ipsum bibendum ut. Duis erat lectus, viverra sit amet mollis quis, pharetra in justo. Phasellus quis magna lacus. Duis condimentum, elit quis elementum mollis, urna ipsum egestas tellus, vel ultricies arcu nisi id risus. Praesent sed lorem imperdiet, efficitur eros sit amet, bibendum dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce vitae mauris vitae nulla condimentum pretium quis eget mi. Duis tempus sapien magna, vitae congue odio dictum et. Fusce id viverra lectus. Etiam congue lorem eu odio convallis commodo sit amet eget nibh. Proin finibus iaculis justo non rhoncus. Nunc felis tellus, rutrum ac justo vitae, mattis porta dui. Ut eu ex et augue posuere iaculis. </string>
    <string name="next_event_sample">10 min to EECS 393</string>
    <string name="next_event_min_to">min to</string>
    <string name="next_event_loc_sample">at White 324</string>
    <string name="next_event_none_remain">No more events for today</string>
    <string name="event_name_sample">Event Name</string>
    <string name="event_time_sample">0:00</string>
    <string name="event_loc_sample">Event location</string>
    <string name="event_time_separator">–</string>
    <string name="up_next_text">Today</string>
    <string name="event_length_suffix">minutes</string>

    <string name="title_activity_edit_itinerary">Edit Itinerary</string>
    <string name="button_edit_text">Edit</string>
    <string name="action_done">Done</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="edit_no_events_yet">No events for this day. Tap \'+\' to add one!</string>

    <string name="title_activity_edit_event">Event</string>
    <string name="edit_event_name_default">Enter title</string>
    <string name="edit_event_dayitin_default">Choose a day</string>
    <string name="edit_event_start_time_default">Start time</string>
    <string name="edit_event_length_default">Enter length</string>
    <string name="edit_event_location_default">Pick location</string>
    <string name="edit_event_roomnumber_default">Room #</string>
    <string name="errormsg_locationedit_invalid">Location name invalid. Use the suggestions when typing a location.</string>
    <string name="errormsg_delete_newevent">This event doesn\'t exist yet!</string>

    <string name="warnmsg_unsaved_edits">Unsaved changes, continue?</string>
    <string name="title_activity_sign_in">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_guest_sign_in">GuestSignInActivity</string>
</resources>
