<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:menu="@menu/menu_edit_event"
    android:background="@color/backWhite"
    tools:context=".EditEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/backWhite"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/edit_layout_padding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_event_title"
                    android:paddingHorizontal="@dimen/edit_icon_margin"
                    />

                <EditText
                    android:id="@+id/edit_event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:autofillHints="@string/edit_event_name_default"
                    android:singleLine="true"
                    android:hint="@string/edit_event_name_default"
                    android:focusedByDefault="false"
                    android:background="@null"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="@color/gray3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_event_dayitinerary_layout"
                android:paddingTop="@dimen/edit_layout_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_event_dayitinerary"
                    android:paddingHorizontal="@dimen/edit_icon_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/edit_event_dayitinerary_text"
                    android:textSize="16sp"
                    android:hint="@string/edit_event_dayitin_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_event_start_layout"
                android:paddingTop="28dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_event_time"
                    android:paddingHorizontal="@dimen/edit_icon_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/edit_event_start_time"
                    android:textSize="16sp"
                    android:hint="@string/edit_event_start_time_default"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="@color/gray3"/>


        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>